--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0c26b5b3",
+   "id": "b10185fb",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "50f72f81",
+   "id": "a4cfb2c3",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "78451c72",
+   "id": "5a91e737",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3ba9ea6e",
+   "id": "dde51dfa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb45e62f",
+   "id": "0b88994f",
    "metadata": {},
    "source": [
     "# Loops\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "8e8c20e5",
+   "id": "d7e2a2e3",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33b0628e",
+   "id": "d0bc9290",
    "metadata": {},
    "source": [
     "There are some problems with the above code:\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "bcd51d56",
+   "id": "0e15381d",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f82c0542",
+   "id": "e6108d4b",
    "metadata": {},
    "source": [
     "How does our `for` loop work?\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "885a7d7e",
+   "id": "93aa7ed8",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others\n",
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e169a6d0",
+   "id": "aa4d8283",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "e24a8759",
+   "id": "7c97a76f",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "4f3c0fee",
+   "id": "34003653",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "02aeff59",
+   "id": "4d6f728c",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "6edca0ea",
+   "id": "e25e2b76",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50f35f8b",
+   "id": "8ff5512a",
    "metadata": {},
    "source": [
     "When we say\n",
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "3fa254a2",
+   "id": "6cebd88c",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "c2a5425d",
+   "id": "92d665e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "946ab8d2",
+   "id": "deb0ceee",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "d75db5dd",
+   "id": "3e55fd60",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "0f4c9c68",
+   "id": "9aad4ff0",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "481fdf16",
+   "id": "fa402a97",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "e7858f56",
+   "id": "35c98e3a",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "fa7f3317",
+   "id": "be5475e6",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "de0ddca1",
+   "id": "606ca7d7",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "fdf984a5",
+   "id": "8ca73fa6",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "8b05017a",
+   "id": "691a7269",
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eaaf2f4d",
+   "id": "7044920d",
    "metadata": {},
    "source": [
     "# Exercise: Name triangles\n",
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "adb02ab6",
+   "id": "1a6c9f7f",
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "3fb8a963",
+   "id": "a6a600dc",
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "9c75fbeb",
+   "id": "49000706",
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0c04648",
+   "id": "ea8b0bc6",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -792,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "90cd2c6c",
+   "id": "da9b2110",
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "e67f934d",
+   "id": "439d8f81",
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97fa9381",
+   "id": "e83e385c",
    "metadata": {},
    "source": [
     "# `while` loops\n",
@@ -865,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "19242cc5",
+   "id": "f75018ba",
    "metadata": {
     "scrolled": true
    },
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3bb2c6f",
+   "id": "e0e7680e",
    "metadata": {},
    "source": [
     "# Exercise: Sum to 100\n",
@@ -924,7 +924,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "c440dfef",
+   "id": "52606dac",
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82b67c7b",
+   "id": "e29af1bf",
    "metadata": {},
    "source": [
     "# `isdigit` is a *string* method\n",
@@ -979,7 +979,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "116ada1a",
+   "id": "b43241a9",
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "679a1fa0",
+   "id": "eaa9f7df",
    "metadata": {},
    "source": [
     "# Full list of methods on strings\n",
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d6d66a5",
+   "id": "fc7de6f2",
    "metadata": {},
    "source": [
     "# Controlling our loops\n",
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "4034f860",
+   "id": "75ea727c",
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1077,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78c38041",
+   "id": "c53b2373",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,7 +1101,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "78069498",
+   "id": "084d45d9",
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "582f9475",
+   "id": "4af0ac03",
    "metadata": {},
    "source": [
     "# Exercise: Sum digits\n",
@@ -1153,7 +1153,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "92f5d7a3",
+   "id": "3d0166cf",
    "metadata": {},
    "outputs": [
     {
@@ -1194,7 +1194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91d9bae5",
+   "id": "92b63721",
    "metadata": {},
    "source": [
     "# Exercise: Sum digits (part 2)\n",
@@ -1207,7 +1207,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "9d084fd7",
+   "id": "f78169b3",
    "metadata": {
     "scrolled": true
    },
@@ -1277,7 +1277,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "c4e8cb8d",
+   "id": "0f2f033f",
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5acd086",
+   "id": "7dc6a337",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7372581",
+   "id": "eff08e25",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -1354,7 +1354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c9cce63",
+   "id": "c4b034e4",
    "metadata": {},
    "source": [
     "# Data structure: List\n",
@@ -1370,7 +1370,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "7a1c2969",
+   "id": "9b041ec8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1386,7 +1386,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "3e8db2cf",
+   "id": "7e49cb92",
    "metadata": {},
    "outputs": [
     {
@@ -1407,7 +1407,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "b244cb30",
+   "id": "23dcd1d0",
    "metadata": {},
    "outputs": [
     {
@@ -1429,7 +1429,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "8bb35e02",
+   "id": "1d21a537",
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1450,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "9d18f21d",
+   "id": "c4e7061b",
    "metadata": {},
    "outputs": [
     {
@@ -1471,7 +1471,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "a6b6dc9e",
+   "id": "b56d37f9",
    "metadata": {},
    "outputs": [
     {
@@ -1492,7 +1492,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "756b59c6",
+   "id": "f0368bad",
    "metadata": {},
    "outputs": [
     {
@@ -1513,7 +1513,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "3b9f90dd",
+   "id": "be4c631c",
    "metadata": {},
    "outputs": [
     {
@@ -1535,7 +1535,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "b378c394",
+   "id": "73347c82",
    "metadata": {},
    "outputs": [
     {
@@ -1559,7 +1559,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "f72d69b2",
+   "id": "6eec0d9a",
    "metadata": {},
    "outputs": [
     {
@@ -1582,7 +1582,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "a067b4d2",
+   "id": "d61f0ae3",
    "metadata": {},
    "outputs": [
     {
@@ -1603,7 +1603,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "73b161d0",
+   "id": "b286ccc6",
    "metadata": {},
    "outputs": [
     {
@@ -1624,7 +1624,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "3218d0f9",
+   "id": "91603303",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1635,7 +1635,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "b4b6e729",
+   "id": "53da7969",
    "metadata": {},
    "outputs": [
     {
@@ -1656,7 +1656,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "d0bbf530",
+   "id": "5bdb5df7",
    "metadata": {},
    "outputs": [
     {
@@ -1677,7 +1677,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "c3e54f65",
+   "id": "d866c558",
    "metadata": {},
    "outputs": [
     {
@@ -1701,7 +1701,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "86cdd9dd",
+   "id": "7119f264",
    "metadata": {},
    "outputs": [
     {
@@ -1725,7 +1725,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "9eb04a8d",
+   "id": "2d8f8853",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1737,7 +1737,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "51cfbbd3",
+   "id": "33f26cf5",
    "metadata": {},
    "outputs": [
     {
@@ -1758,7 +1758,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "d985aa28",
+   "id": "94632e44",
    "metadata": {},
    "outputs": [
     {
@@ -1781,7 +1781,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "567c5337",
+   "id": "0f965ef6",
    "metadata": {},
    "outputs": [
     {
@@ -1806,7 +1806,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "fd3a00c2",
+   "id": "ffeb677c",
    "metadata": {},
    "outputs": [
     {
@@ -1827,15 +1827,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b888215",
+   "id": "ac8b9b76",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others (list edition)\n",
     "\n",
     "1. Define three empty lists -- `vowels`, `digits`, and `others`.\n",
     "2. Ask the user to enter a string.\n",
-    "3. Go through the string, on"
+    "3. Go through the string, one element at a time, and determine whether each character is a vowel (a, e, i, o u), a digit (0-9), or something else.  Add it to the appropriate list.\n",
+    "4. Finally, print each of the lists, and how they categorized our data."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6bd63638",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
