--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a695275c",
+   "id": "83a153e5",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "013bc7ba",
+   "id": "fee31b86",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9f02247a",
+   "id": "7eeae158",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1a0c4a4e",
+   "id": "b3fbd5ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dab39b0e",
+   "id": "151ae6bf",
    "metadata": {},
    "source": [
     "# Loops\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5357bf05",
+   "id": "cde9c7fb",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0ac933b",
+   "id": "2ef86388",
    "metadata": {},
    "source": [
     "There are some problems with the above code:\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8f3b0957",
+   "id": "51e8da97",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4dfb78fb",
+   "id": "c0fcbf8a",
    "metadata": {},
    "source": [
     "How does our `for` loop work?\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b7bc3c3",
+   "id": "b1de94d5",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others\n",
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ff56aa31",
+   "id": "59906e2d",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "a0c65319",
+   "id": "2c5a8eba",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "20d2263f",
+   "id": "b73b4d2e",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "81c4a19e",
+   "id": "7a6b3124",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "038d2518",
+   "id": "16714ff6",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86499019",
+   "id": "67e8208a",
    "metadata": {},
    "source": [
     "When we say\n",
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "6e0e13c1",
+   "id": "5a97577e",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "a0edd453",
+   "id": "7b4e5773",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "2266c2f7",
+   "id": "47bc1455",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "dbe9a8ef",
+   "id": "8a44e79b",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "9330fdc7",
+   "id": "be741ef6",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "68a766d8",
+   "id": "db63dcd3",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "7517ec87",
+   "id": "846da6ea",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "1272e434",
+   "id": "b4a11585",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "bccf7613",
+   "id": "d62d3e2b",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "ab44b60f",
+   "id": "d1d58c08",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "60cb9d26",
+   "id": "fc0cf455",
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe2f3415",
+   "id": "6eb02636",
    "metadata": {},
    "source": [
     "# Exercise: Name triangles\n",
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "e9d68655",
+   "id": "a71539cc",
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "f8aa02e0",
+   "id": "a1a9ff81",
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "e5fb8d0e",
+   "id": "a9ff2976",
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e942346",
+   "id": "aa39c269",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -792,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "64e60b0e",
+   "id": "6ae4d5d4",
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "698a4f63",
+   "id": "4739545e",
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9acc2bf8",
+   "id": "8dee33ed",
    "metadata": {},
    "source": [
     "# `while` loops\n",
@@ -865,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "ad197617",
+   "id": "6bd8a998",
    "metadata": {
     "scrolled": true
    },
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f488905f",
+   "id": "f8672616",
    "metadata": {},
    "source": [
     "# Exercise: Sum to 100\n",
@@ -924,7 +924,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "ec40c968",
+   "id": "141dc36c",
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64f9b6d6",
+   "id": "c87efea1",
    "metadata": {},
    "source": [
     "# `isdigit` is a *string* method\n",
@@ -979,7 +979,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "f7b6b1a2",
+   "id": "cd25d79b",
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "813941a0",
+   "id": "51d46212",
    "metadata": {},
    "source": [
     "# Full list of methods on strings\n",
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1982f8de",
+   "id": "80b252e6",
    "metadata": {},
    "source": [
     "# Controlling our loops\n",
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "2b2f58e0",
+   "id": "2c8adb27",
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1077,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ff112c5",
+   "id": "b889ab50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,7 +1101,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "6e4e9fc1",
+   "id": "d89e8cca",
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d316a8a8",
+   "id": "3c02eb47",
    "metadata": {},
    "source": [
     "# Exercise: Sum digits\n",
@@ -1153,7 +1153,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "647b2175",
+   "id": "f2b5daf3",
    "metadata": {},
    "outputs": [
     {
@@ -1194,7 +1194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "948bbda5",
+   "id": "4d78d4ec",
    "metadata": {},
    "source": [
     "# Exercise: Sum digits (part 2)\n",
@@ -1207,7 +1207,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "1f1cc566",
+   "id": "c5727e74",
    "metadata": {
     "scrolled": true
    },
@@ -1277,7 +1277,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "015a4df3",
+   "id": "2c299979",
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb3d1cbe",
+   "id": "8e3b9cd9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dd47890",
+   "id": "2181a166",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -1354,7 +1354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09ccdb45",
+   "id": "7c4578ba",
    "metadata": {},
    "source": [
     "# Data structure: List\n",
@@ -1370,7 +1370,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "1ad5e185",
+   "id": "98078d7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1386,7 +1386,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "8ca15627",
+   "id": "fa696d3e",
    "metadata": {},
    "outputs": [
     {
@@ -1407,7 +1407,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "69e59c12",
+   "id": "61229113",
    "metadata": {},
    "outputs": [
     {
@@ -1429,7 +1429,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "e7eb76dc",
+   "id": "ca5e878c",
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1450,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "83087d64",
+   "id": "24240092",
    "metadata": {},
    "outputs": [
     {
@@ -1471,7 +1471,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "41ce9b41",
+   "id": "069f7eee",
    "metadata": {},
    "outputs": [
     {
@@ -1492,7 +1492,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "03777a2d",
+   "id": "d6f313db",
    "metadata": {},
    "outputs": [
     {
@@ -1513,7 +1513,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "ebefa679",
+   "id": "9dfc094d",
    "metadata": {},
    "outputs": [
     {
@@ -1535,7 +1535,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "5af0ffd5",
+   "id": "018c28b5",
    "metadata": {},
    "outputs": [
     {
@@ -1559,7 +1559,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "716a7285",
+   "id": "4a4529ec",
    "metadata": {},
    "outputs": [
     {
@@ -1582,7 +1582,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "1a07167e",
+   "id": "6091d123",
    "metadata": {},
    "outputs": [
     {
@@ -1603,7 +1603,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "7e3f7d61",
+   "id": "fa881cd5",
    "metadata": {},
    "outputs": [
     {
@@ -1624,7 +1624,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "98a58e32",
+   "id": "b92d757c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1635,7 +1635,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "afc5cc9d",
+   "id": "231db6e5",
    "metadata": {},
    "outputs": [
     {
@@ -1656,7 +1656,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "4ee6e312",
+   "id": "d4fff9e4",
    "metadata": {},
    "outputs": [
     {
@@ -1677,7 +1677,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "8e569fea",
+   "id": "2f41695e",
    "metadata": {},
    "outputs": [
     {
@@ -1701,7 +1701,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "3aa1fb4d",
+   "id": "ccb211c5",
    "metadata": {},
    "outputs": [
     {
@@ -1725,7 +1725,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "155c23d6",
+   "id": "272d9208",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1737,7 +1737,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "743cbfe4",
+   "id": "6a37db4e",
    "metadata": {},
    "outputs": [
     {
@@ -1758,7 +1758,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "52237029",
+   "id": "d02b89a4",
    "metadata": {},
    "outputs": [
     {
@@ -1781,7 +1781,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "1b3c5628",
+   "id": "78108680",
    "metadata": {},
    "outputs": [
     {
@@ -1806,7 +1806,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "ad37e495",
+   "id": "d964c348",
    "metadata": {},
    "outputs": [
     {
@@ -1827,7 +1827,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2372c8fc",
+   "id": "f9a4847c",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others (list edition)\n",
@@ -1841,7 +1841,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "4506bc83",
+   "id": "e3bc8e61",
    "metadata": {},
    "outputs": [
     {
@@ -1878,7 +1878,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "f8382376",
+   "id": "0ca33596",
    "metadata": {},
    "outputs": [
     {
@@ -1903,7 +1903,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "b4e064fe",
+   "id": "26c28763",
    "metadata": {},
    "outputs": [
     {
@@ -1923,8 +1923,83 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 85,
+   "id": "13a548ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 20, 30, 40, 50, 60]"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# what if I want to add each of the elements of [40, 50, 60] to mylist?\n",
+    "\n",
+    "mylist = [10, 20, 30]\n",
+    "\n",
+    "mylist += [40, 50, 60]  # this runs a for loop on the list, appending each element in turn\n",
+    "\n",
+    "mylist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "c408b05d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 20, 30, 'abcd']"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# list.append adds one item, whatever it is, to the end of the list\n",
+    "# += runs a for loop on what it has to its right, and appends each element in turn\n",
+    "\n",
+    "mylist = [10, 20, 30]\n",
+    "mylist.append('abcd')\n",
+    "mylist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "490854b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 20, 30, 'abcd', 'e', 'f', 'g', 'h']"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mylist += 'efgh'  # what will happen here?\n",
+    "mylist"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "70db010d",
+   "id": "c74ae3c8",
    "metadata": {},
    "outputs": [],
    "source": []
